[gd_scene load_steps=27 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Opponent.tscn" type="PackedScene" id=3]
[ext_resource path="res://Card.tscn" type="PackedScene" id=4]
[ext_resource path="res://TT2020StyleB-Regular.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://arrowUp.png" type="Texture" id=6]
[ext_resource path="res://Menu.tscn" type="PackedScene" id=7]
[ext_resource path="res://Bid.tscn" type="PackedScene" id=8]
[ext_resource path="res://audio/shuffle.ogg" type="AudioStream" id=9]
[ext_resource path="res://audio/cardPlace3.ogg" type="AudioStream" id=10]
[ext_resource path="res://audio/cardPlace2.ogg" type="AudioStream" id=11]
[ext_resource path="res://audio/cardPlace1.ogg" type="AudioStream" id=12]
[ext_resource path="res://audio/menu.ogg" type="AudioStream" id=13]
[ext_resource path="res://audio/cardPlace4.ogg" type="AudioStream" id=14]
[ext_resource path="res://audio/bid.ogg" type="AudioStream" id=15]
[ext_resource path="res://audio/deal.ogg" type="AudioStream" id=16]
[ext_resource path="res://audio/hit.ogg" type="AudioStream" id=17]
[ext_resource path="res://audio/miss.ogg" type="AudioStream" id=18]

[sub_resource type="DynamicFont" id=1]
size = 120
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
size = 90
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=3]
size = 32
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 5 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.156863, 0.623529, 0.4, 1 )

[sub_resource type="DynamicFont" id=5]
size = 100
outline_size = 3
font_data = ExtResource( 5 )

[sub_resource type="StyleBoxFlat" id=6]

[sub_resource type="DynamicFont" id=7]
size = 26
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=8]
size = 130
outline_size = 8
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 5 )

[node name="Main" type="Node2D"]
script = ExtResource( 1 )

[node name="Tween" type="Tween" parent="."]

[node name="Background" type="ColorRect" parent="."]
margin_right = 1000.0
margin_bottom = 600.0
color = Color( 0.156863, 0.623529, 0.4, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="."]
margin_left = -700.0
margin_top = 20.0
margin_right = 1700.0
margin_bottom = 360.0
custom_fonts/font = SubResource( 1 )
text = "HELL & BACK"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayingFor" type="Label" parent="."]
margin_top = 280.0
margin_right = 1000.0
margin_bottom = 480.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.364706, 0, 0, 1 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Status" type="Label" parent="."]
margin_left = 620.0
margin_top = 428.0
margin_right = 900.0
margin_bottom = 460.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_constants/shadow_offset_x = 3
custom_constants/shadow_offset_y = 3
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ErrMsg" type="Label" parent="."]
visible = false
margin_left = 618.0
margin_top = 428.0
margin_right = 1000.0
margin_bottom = 460.0
custom_styles/normal = SubResource( 4 )
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_constants/shadow_offset_x = 3
custom_constants/shadow_offset_y = 3
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BidStatus" type="Label" parent="."]
margin_top = 200.0
margin_right = 1000.0
margin_bottom = 380.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.270588, 0.270588, 0.270588, 1 )
custom_constants/shadow_offset_x = 3
custom_constants/shadow_offset_y = 3
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Debug" type="RichTextLabel" parent="."]
visible = false
margin_left = 760.0
margin_right = 1000.0
margin_bottom = 440.0
custom_styles/normal = SubResource( 6 )
scroll_following = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TestCreate" type="Button" parent="."]
visible = false
margin_left = 760.0
margin_right = 840.0
margin_bottom = 60.0
text = "create"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TestJoin" type="Button" parent="."]
visible = false
margin_left = 840.0
margin_right = 920.0
margin_bottom = 60.0
text = "join"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TestStart" type="Button" parent="."]
visible = false
margin_left = 920.0
margin_right = 1000.0
margin_bottom = 60.0
text = "start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Trump" type="Label" parent="."]
visible = false
margin_left = 16.0
margin_top = 240.0
margin_right = 48.0
margin_bottom = 280.0
rect_scale = Vector2( 4, 4 )
text = "4c"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OtherPlayer" type="Label" parent="."]
visible = false
margin_left = 304.0
margin_top = 64.0
margin_right = 336.0
margin_bottom = 104.0
rect_scale = Vector2( 4, 4 )
text = "4c"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Arrow" type="Node2D" parent="."]
visible = false
position = Vector2( 500, 280 )
rotation = 1.5708

[node name="Pivot" type="Node2D" parent="Arrow"]
rotation = 1.5708

[node name="Sprite" type="Sprite" parent="Arrow/Pivot"]
position = Vector2( 0, -95 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 6 )

[node name="Pivot" type="Node2D" parent="Arrow/Pivot"]
position = Vector2( 0, -106 )

[node name="ArrowButton" type="Button" parent="Arrow/Pivot/Pivot"]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = -30.0
margin_top = -26.0
margin_right = 30.0
margin_bottom = 21.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Arrow/Pivot/Pivot"]
margin_left = -40.0
margin_top = -30.0
margin_right = 40.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "DEAL"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="PlayerSelf" parent="." instance=ExtResource( 2 )]
visible = false
position = Vector2( 500, 600 )

[node name="Card" parent="PlayerSelf" instance=ExtResource( 4 )]
visible = false
position = Vector2( 0, -220 )
scale = Vector2( 0.7, 0.7 )

[node name="Opponent_21_30_42_50_63_70_84" parent="." instance=ExtResource( 3 )]
visible = false
position = Vector2( 500, 0 )
rotation = 3.14159

[node name="Card" parent="Opponent_21_30_42_50_63_70_84" instance=ExtResource( 4 )]
position = Vector2( -0.000488281, -180 )
rotation = 3.14159
scale = Vector2( 0.7, 0.7 )

[node name="Opponent_20_30_40_50_60_70_83" parent="." instance=ExtResource( 3 )]
visible = false
position = Vector2( 240, 0 )
rotation = 3.14159

[node name="Card" parent="Opponent_20_30_40_50_60_70_83" instance=ExtResource( 4 )]
position = Vector2( -100, -160 )
rotation = 1.5708
scale = Vector2( 0.7, 0.7 )

[node name="Opponent_20_30_40_50_60_70_85" parent="." instance=ExtResource( 3 )]
visible = false
position = Vector2( 760, 0 )
rotation = 3.14159

[node name="Card" parent="Opponent_20_30_40_50_60_70_85" instance=ExtResource( 4 )]
position = Vector2( 100, -160 )
rotation = 1.5708
scale = Vector2( 0.7, 0.7 )

[node name="Opponent_20_30_40_52_60_73_80" parent="." instance=ExtResource( 3 )]
visible = false
position = Vector2( 360, 0 )
rotation = 3.14159

[node name="Card" parent="Opponent_20_30_40_52_60_73_80" instance=ExtResource( 4 )]
position = Vector2( -40, -160 )
rotation = 1.5708
scale = Vector2( 0.7, 0.7 )

[node name="Opponent_20_30_40_53_60_74_80" parent="." instance=ExtResource( 3 )]
visible = false
position = Vector2( 640, 0 )
rotation = 3.14159

[node name="Card" parent="Opponent_20_30_40_53_60_74_80" instance=ExtResource( 4 )]
position = Vector2( 40, -160 )
rotation = 1.5708
scale = Vector2( 0.7, 0.7 )

[node name="Opponent_20_31_41_51_60_70_80" parent="." instance=ExtResource( 3 )]
visible = false
position = Vector2( 0, 280 )
rotation = 1.5708

[node name="Card" parent="Opponent_20_31_41_51_60_70_80" instance=ExtResource( 4 )]
position = Vector2( 0, -345 )
rotation = 3.14159
scale = Vector2( 0.7, 0.7 )

[node name="Opponent_20_30_40_50_61_71_81" parent="." instance=ExtResource( 3 )]
visible = false
position = Vector2( 0, 340 )
rotation = 1.5708
scale = Vector2( 0.8, 0.8 )

[node name="Card" parent="Opponent_20_30_40_50_61_71_81" instance=ExtResource( 4 )]
position = Vector2( 74.9984, -425 )
rotation = 3.14159
scale = Vector2( 0.875, 0.875 )

[node name="Opponent_20_30_40_50_62_72_82" parent="." instance=ExtResource( 3 )]
visible = false
position = Vector2( -1.45519e-11, 120 )
rotation = 1.5708
scale = Vector2( 0.8, 0.8 )

[node name="Card" parent="Opponent_20_30_40_50_62_72_82" instance=ExtResource( 4 )]
position = Vector2( 199.998, -425.001 )
rotation = 3.14159
scale = Vector2( 0.875, 0.875 )

[node name="Opponent_20_32_43_54_60_70_80" parent="." instance=ExtResource( 3 )]
visible = false
position = Vector2( 1000, 280 )
rotation = 4.71239

[node name="Card" parent="Opponent_20_32_43_54_60_70_80" instance=ExtResource( 4 )]
position = Vector2( 0, -345 )
rotation = 3.14159
scale = Vector2( 0.7, 0.7 )

[node name="Opponent_20_30_40_50_64_75_86" parent="." instance=ExtResource( 3 )]
visible = false
position = Vector2( 1000, 120 )
rotation = 4.71239
scale = Vector2( 0.8, 0.8 )

[node name="Card" parent="Opponent_20_30_40_50_64_75_86" instance=ExtResource( 4 )]
position = Vector2( -200, -425 )
rotation = 3.14159
scale = Vector2( 0.875, 0.875 )

[node name="Opponent_20_30_40_50_65_76_87" parent="." instance=ExtResource( 3 )]
visible = false
position = Vector2( 1000, 340 )
rotation = 4.71239
scale = Vector2( 0.8, 0.8 )

[node name="Card" parent="Opponent_20_30_40_50_65_76_87" instance=ExtResource( 4 )]
position = Vector2( -75.0004, -425 )
rotation = 3.14159
scale = Vector2( 0.875, 0.875 )

[node name="Dealing" type="Node2D" parent="."]
visible = false

[node name="Tween" type="Tween" parent="Dealing"]

[node name="Cards" type="Node2D" parent="Dealing"]
position = Vector2( 500, 280 )
scale = Vector2( 0.75, 0.75 )

[node name="Deck" parent="Dealing/Cards" instance=ExtResource( 4 )]

[node name="Trump" parent="Dealing/Cards" instance=ExtResource( 4 )]

[node name="Card" parent="Dealing/Cards" instance=ExtResource( 4 )]

[node name="AnimDebug" type="Label" parent="."]
visible = false
margin_right = 520.0
margin_bottom = 14.0
text = "ANIM DEBUG"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayingCard" parent="." instance=ExtResource( 4 )]
position = Vector2( 840, -60 )
scale = Vector2( 0.7, 0.7 )

[node name="Bidding" parent="." instance=ExtResource( 8 )]
visible = false

[node name="Center" type="Node2D" parent="."]
position = Vector2( 500, 280 )

[node name="HitMiss" type="Node2D" parent="."]
visible = false
position = Vector2( 500, 280 )

[node name="Label" type="Label" parent="HitMiss"]
margin_left = -200.0
margin_top = -80.0
margin_right = 200.0
margin_bottom = 60.0
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_constants/shadow_offset_x = 3
custom_constants/shadow_offset_y = 3
text = "asd"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" parent="." instance=ExtResource( 7 )]

[node name="ShuffleSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )

[node name="BidSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 15 )

[node name="DealSound1" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 16 )

[node name="DealSound2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 16 )

[node name="DealSound3" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 16 )

[node name="DealSound4" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 16 )

[node name="CardSound1" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )

[node name="CardSound2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )

[node name="CardSound3" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )

[node name="CardSound4" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 14 )

[node name="MenuSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )

[node name="HitSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 17 )

[node name="MissSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 18 )
[connection signal="pressed" from="TestCreate" to="." method="_on_TestCreate_pressed"]
[connection signal="pressed" from="TestJoin" to="." method="_on_TestJoin_pressed"]
[connection signal="pressed" from="TestStart" to="." method="_on_TestStart_pressed"]
[connection signal="pressed" from="Arrow/Pivot/Pivot/ArrowButton" to="." method="_on_ArrowButton_pressed"]
